apps/ocis/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocis
  labels:
    goldilocks.fairwinds.com/enabled: "true"
