apps/ocis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocis
  namespace: ocis
spec:
  type: ClusterIP
  selector:
    app: ocis
  ports:
    - name: http
      port: 9200
      targetPort: 9200
