apps/ocis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocis
  namespace: ocis
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: drive.bijouxlabs.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ocis
                port:
                  number: 9200
  tls:
    - hosts:
        - drive.bijouxlabs.cc
